--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <body>
     <section class="container mt-4">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{% url 'index' %}">Voltar</a>
+            <a class="navbar-brand" href="{% url 'index' %}">Ir para o cadastro</a>
         </nav>
         {% block content %}{% endblock %}
     </section>
