--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,12 @@
     <section class="col-6">
         <form action="{% url 'consulta' %}", method="post">
             {% csrf_token %}
-            {{ form }}
+            {% for field in form.visible_fields %}
+            <div class="form-group">
+                <label for="{{field.id_for_label}}">{{field.label}}</label>
+                {{field}}
+            </div>
+            {% endfor %}
         <input type="submit" value="Enviar" class="btn btn-success">
         </form>
     </section>    
